Fix build errors: improve functions exclusion and ESLint config

--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,7 @@
         "destination": "/index.html"
       }
     ],
+    "trailingSlash": false,
     "cleanUrls": true,
     "headers": [
       {
