--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,8 @@
 {
   "name": "functions",
+  "type": "module",
   "scripts": {
-    "lint": "eslint --fix .",
+    "lint": "eslint --fix . --config eslint.config.cjs",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
