--- a/functions/package.json
+++ b/functions/package.json
@@ -1,8 +1,7 @@
 {
   "name": "functions",
-  "type": "module",
   "scripts": {
-    "lint": "eslint --fix . --config eslint.config.cjs",
+    "lint": "eslint --fix .",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
@@ -20,11 +19,11 @@
     "firebase-functions": "^6.4.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "eslint": "^9.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
     "firebase-functions-test": "^3.1.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^8.40.0"
+    "typescript": "^4.9.0"
   },
   "private": true
 }
