--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Build Firebase Functions
       run: |
         cd functions
-        npm ci
+        npm ci --legacy-peer-deps
         npm run build
         cd ..
       
