--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,9 +38,10 @@ jobs:
       
     - name: Build application (excluding functions)
       run: |
-        # 直接使用 Next.js 建置，跳過 linting
-        npx next build --no-lint
-        # 驗證 out 目錄是否存在
+        # 使用 package.json 中的建置腳本
+        npm run build
+        # 檢查建置結果
+        echo "Checking build output..."
         ls -la out/
         echo "Build completed successfully!"
       env:
