--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,16 @@ jobs:
         npm run build
         # 檢查建置結果
         echo "Checking build output..."
-        ls -la out/
+        ls -la
+        if [ -d "out" ]; then
+          echo "✅ out directory exists"
+          ls -la out/
+          echo "Number of files in out directory:"
+          find out -type f | wc -l
+        else
+          echo "❌ out directory not found"
+          exit 1
+        fi
         echo "Build completed successfully!"
       env:
         NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
