--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 8080",
-    "build": "next build",
+    "build": "next build && npm run postbuild",
+    "postbuild": "mkdir -p out && cp -r .next/static/* out/ 2>/dev/null || true && cp -r public/* out/ 2>/dev/null || true",
     "start": "next start",
     "lint": "next lint",
     "export": "next build",
