--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,10 +35,12 @@ jobs:
         # 創建一個空的 functions 目錄以避免路徑問題
         mkdir -p functions
         echo "# This directory is temporarily empty during build" > functions/README.md
+        # 給建置腳本執行權限
+        chmod +x build-static.sh
       
     - name: Build application (excluding functions)
       run: |
-        # 使用 package.json 中的建置腳本
+        # 使用新的建置腳本
         npm run build
         # 檢查建置結果
         echo "Checking build output..."
@@ -46,6 +48,13 @@ jobs:
         if [ -d "out" ]; then
           echo "✅ out directory exists"
           ls -la out/
+          echo "Checking for index.html..."
+          if [ -f "out/index.html" ]; then
+            echo "✅ index.html found"
+          else
+            echo "❌ index.html not found"
+            exit 1
+          fi
           echo "Number of files in out directory:"
           find out -type f | wc -l
         else
