--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 8080",
-    "build": "bash build-static.sh",
+    "build": "npx next build",
+    "build-static": "bash build-static.sh",
     "start": "next start",
     "lint": "next lint",
     "export": "next build",
-    "deploy": "npm run build && firebase deploy"
+    "deploy": "npm run build-static && firebase deploy"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
