--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,10 @@ jobs:
     - name: Install Firebase CLI
       run: npm install -g firebase-tools
     
-    - name: Make build script executable
-      run: chmod +x build-static.sh
+    - name: Make build scripts executable
+      run: |
+        chmod +x build-static.sh
+        chmod +x functions/build.sh
     
     - name: Build application (excluding functions)
       env:
@@ -64,6 +66,12 @@ jobs:
           echo "❌ index.html not found"
           exit 1
         fi
+    
+    - name: Build Firebase Functions
+      run: |
+        cd functions
+        npm run build
+        cd ..
     
     - name: Deploy to Firebase
       run: firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}"
