--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --port 8080",
     "build": "npx next build",
-    "build-static": "bash build-static.sh",
+    "build-static": "build-static.bat",
     "start": "next start",
     "lint": "next lint",
     "export": "next build",
