--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev --port 8080",
     "build": "npx next build",
     "build-static": "bash build-static.sh",
+    "build-fixed": "npx next build && node scripts/fix-paths.js",
+    "build-github": "npx next build && node scripts/fix-paths.js",
     "start": "next start",
     "lint": "next lint",
     "export": "next build",
-    "deploy": "npm run build-static && firebase deploy"
+    "deploy": "npm run build-fixed && firebase deploy"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
