--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Install Firebase CLI
       run: npm install -g firebase-tools
     
+    - name: Make build script executable
+      run: chmod +x build-static.sh
+    
     - name: Build application
       env:
         NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
@@ -34,31 +37,22 @@ jobs:
         NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
         NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
       run: |
-        echo "🚀 Starting build process..."
-        
-        # 檢查環境變數
-        echo "Checking environment variables..."
-        if [ -z "$NEXT_PUBLIC_FIREBASE_API_KEY" ]; then
-          echo "❌ NEXT_PUBLIC_FIREBASE_API_KEY is not set"
-          exit 1
+        # 暫時移動 functions 目錄
+        if [ -d "functions" ]; then
+          mv functions functions_backup
         fi
-        echo "✅ Environment variables are set"
         
         # 執行建置
-        echo "📦 Running Next.js build..."
-        npm run build
-        
-        # 檢查建置結果
-        if [ ! -d "out" ]; then
-          echo "❌ Build failed: out directory not found"
-          exit 1
-        fi
+        npm run build-static
         
         # 執行路徑修正
         echo "🔧 Running path fix script..."
         node scripts/fix-paths.js
         
-        echo "✅ Build process completed successfully"
+        # 恢復 functions 目錄
+        if [ -d "functions_backup" ]; then
+          mv functions_backup functions
+        fi
     
     - name: Verify build output
       run: |
@@ -75,17 +69,5 @@ jobs:
           exit 1
         fi
     
-    - name: Build Firebase Functions
-      run: |
-        if [ -d "functions" ]; then
-          echo "Building Firebase Functions..."
-          cd functions
-          npm ci
-          npm run build
-          cd ..
-        else
-          echo "No functions directory found, skipping functions build"
-        fi
-    
-    - name: Deploy to Firebase
-      run: firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}"
+    - name: Deploy to Firebase Hosting
+      run: firebase deploy --only hosting --token "${{ secrets.FIREBASE_TOKEN }}"
