--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,14 @@
     ],
     "rewrites": [
       {
+        "source": "/dashboard/**",
+        "destination": "/dashboard/index.html"
+      },
+      {
+        "source": "/dashboard",
+        "destination": "/dashboard/index.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
