--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,10 @@
     ],
     "rewrites": [
       {
+        "source": "/dashboard/**",
+        "destination": "/dashboard.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
