--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,10 @@ jobs:
           echo '<!DOCTYPE html><html><head><title>Deer Lab Dashboard</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"></head><body><div id="root"><h1>Deer Lab Dashboard</h1><p>Loading application...</p></div></body></html>' > out/dashboard.html
         fi
         
+        # 複製所有頁面
+        echo "📁 Copying all pages..."
+        node scripts/copy-all-pages.js
+        
         # 執行徹底的路徑修正
         echo "🔧 Running complete path fix script..."
         node scripts/fix-paths-complete.js
