--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --port 8080",
     "build": "npx next build",
-    "build-static": "bash build-static.sh",
+    "build-static": "node scripts/build-static.js",
     "build-fixed": "npx next build && node scripts/fix-paths.js",
     "build-github": "npx next build && node scripts/fix-paths.js",
     "start": "next start",
