fix: 添加建置測試腳本，確保部署時所有步驟正確執行

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,6 +69,10 @@ jobs:
         echo "🔧 Running client routing fix script..."
         node scripts/fix-client-routing.js
         
+        # 測試建置結果
+        echo "🧪 Testing build result..."
+        node scripts/test-build.js
+        
         # 驗證建置結果
         echo "🔍 Verifying build result..."
         node scripts/verify-build.js
