--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,26 @@
     ],
     "rewrites": [
       {
+        "source": "/static/**",
+        "destination": "/static/**"
+      },
+      {
+        "source": "/manifest.json",
+        "destination": "/manifest.json"
+      },
+      {
+        "source": "/favicon.ico",
+        "destination": "/favicon.ico"
+      },
+      {
+        "source": "/icon-*.png",
+        "destination": "/icon-*.png"
+      },
+      {
+        "source": "/dashboard/**",
+        "destination": "/dashboard/**"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
