--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,14 @@
     ],
     "rewrites": [
       {
+        "source": "/static/**",
+        "destination": "/static/**"
+      },
+      {
+        "source": "/_next/static/**",
+        "destination": "/static/**"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
@@ -28,6 +36,19 @@
           {
             "key": "Cache-Control",
             "value": "public, max-age=31536000"
+          },
+          {
+            "key": "Content-Type",
+            "value": "application/javascript"
+          }
+        ]
+      },
+      {
+        "source": "**/*.css",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "text/css"
           }
         ]
       },
@@ -37,6 +58,15 @@
           {
             "key": "Cache-Control",
             "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
+      },
+      {
+        "source": "**/*.@(png|jpg|jpeg|gif|ico|svg)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000"
           }
         ]
       }
