--- a/.github/workflows/deploy-simple.yml
+++ b/.github/workflows/deploy-simple.yml
@@ -1,40 +1,17 @@
-name: Deploy to Firebase Hosting (Simple)
+name: Deploy to Firebase Hosting (Simple) - DISABLED
 
 on:
-  push:
-    branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      dummy:
+        description: 'This workflow is disabled'
+        required: false
+        default: 'disabled'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'npm'
-        
-    - name: Install dependencies
-      run: npm ci
-      
-    - name: Build project
-      run: npm run build-static
-      
-    - name: List build output
-      run: |
-        echo "Build output contents:"
-        ls -la out/
-        echo "Static files:"
-        ls -la out/static/ || echo "No static directory"
-        
-    - name: Deploy to Firebase
-      uses: FirebaseExtended/action-hosting-deploy@v0
-      with:
-        repoToken: '${{ secrets.GITHUB_TOKEN }}'
-        firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
-        channelId: live
-        projectId: deer-lab
+    - name: This workflow is disabled
+      run: echo "This workflow is disabled. Use deploy.yml instead."
