--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,9 @@
-name: Deploy to Firebase Hosting
+name: Deploy to Firebase Hosting (Main)
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build_and_deploy:
@@ -14,11 +13,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js
+    - name: Setup Node.js 20
       uses: actions/setup-node@v4
       with:
         node-version: '20'
         cache: 'npm'
+        
+    - name: Verify Node.js version
+      run: |
+        echo "Node.js version:"
+        node --version
+        echo "npm version:"
+        npm --version
         
     - name: Install dependencies
       run: npm ci
