--- a/firebase.json
+++ b/firebase.json
@@ -58,9 +58,6 @@
     ]
   },
   "functions": {
-    "source": "functions",
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run build"
-    ]
+    "source": "functions"
   }
 }
