--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,10 @@
     ],
     "rewrites": [
       {
+        "source": "/dashboard/**",
+        "destination": "/dashboard.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
@@ -21,10 +25,6 @@
           {
             "key": "Cache-Control",
             "value": "public, max-age=31536000"
-          },
-          {
-            "key": "Content-Type",
-            "value": "application/javascript"
           }
         ]
       },
@@ -34,6 +34,15 @@
           {
             "key": "Content-Type",
             "value": "text/css"
+          }
+        ]
+      },
+      {
+        "source": "**/*.js",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/javascript"
           }
         ]
       },
