--- a/firebase.json
+++ b/firebase.json
@@ -20,8 +20,12 @@
     "cleanUrls": false,
     "headers": [
       {
-        "source": "**/*.@(js|css)",
+        "source": "**/*.js",
         "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/javascript"
+          },
           {
             "key": "Cache-Control",
             "value": "public, max-age=31536000"
@@ -34,15 +38,10 @@
           {
             "key": "Content-Type",
             "value": "text/css"
-          }
-        ]
-      },
-      {
-        "source": "**/*.js",
-        "headers": [
+          },
           {
-            "key": "Content-Type",
-            "value": "application/javascript"
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000"
           }
         ]
       },
@@ -56,7 +55,7 @@
         ]
       },
       {
-        "source": "**/*.@(png|jpg|jpeg|gif|ico|svg)",
+        "source": "**/*.@(png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)",
         "headers": [
           {
             "key": "Cache-Control",
@@ -64,15 +63,7 @@
           }
         ]
       }
-    ],
-    "environment": {
-      "NEXT_PUBLIC_FIREBASE_API_KEY": "AIzaSyCMIAqNPsIyl3fJNllqNCuUJE2Rvcdf6fk",
-      "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "deer-lab.firebaseapp.com",
-      "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "deer-lab",
-      "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": "deer-lab.firebasestorage.app",
-      "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "554942047858",
-      "NEXT_PUBLIC_FIREBASE_APP_ID": "1:554942047858:web:607d3e27bb438c898644eb"
-    }
+    ]
   },
   "functions": {
     "source": "functions"
