--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,10 @@
     ],
     "rewrites": [
       {
+        "source": "/static/**",
+        "destination": "/static/**"
+      },
+      {
         "source": "/dashboard/**",
         "destination": "/dashboard.html"
       },
@@ -16,8 +20,13 @@
         "destination": "/index.html"
       }
     ],
-    "trailingSlash": false,
-    "cleanUrls": false,
+    "redirects": [
+      {
+        "source": "/static/**",
+        "destination": "/static/**",
+        "type": 200
+      }
+    ],
     "headers": [
       {
         "source": "**/*.js",
@@ -27,8 +36,8 @@
             "value": "application/javascript"
           },
           {
-            "key": "Cache-Control",
-            "value": "public, max-age=31536000"
+            "key": "X-Content-Type-Options",
+            "value": "nosniff"
           }
         ]
       },
@@ -40,26 +49,8 @@
             "value": "text/css"
           },
           {
-            "key": "Cache-Control",
-            "value": "public, max-age=31536000"
-          }
-        ]
-      },
-      {
-        "source": "**/*.html",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "no-cache, no-store, must-revalidate"
-          }
-        ]
-      },
-      {
-        "source": "**/*.@(png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=31536000"
+            "key": "X-Content-Type-Options",
+            "value": "nosniff"
           }
         ]
       }
