Fix Firebase Hosting routing - Add specific rewrites for dashboard routes

--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,14 @@
         "destination": "/static/**"
       },
       {
+        "source": "/dashboard/**",
+        "destination": "/dashboard.html"
+      },
+      {
+        "source": "/dashboard",
+        "destination": "/dashboard.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
