Fix JavaScript chunks 404 errors - Add proper path correction for /next/static/chunks/ routes

--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,10 @@
         "destination": "/static/**"
       },
       {
+        "source": "/next/static/**",
+        "destination": "/static/**"
+      },
+      {
         "source": "/dashboard/suppliers",
         "destination": "/dashboard/suppliers.html"
       },
