--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,36 +39,8 @@ jobs:
         NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
       run: npm run build
       
-    - name: Verify build output
-      run: |
-        echo "Checking build output..."
-        ls -la out/
-        echo "Number of files in out directory:"
-        find out -type f | wc -l
-        echo "Checking for index.html..."
-        if [ -f "out/index.html" ]; then
-          echo "✅ index.html exists"
-          head -5 out/index.html
-        else
-          echo "❌ index.html not found"
-          exit 1
-        fi
-        echo "Checking for static directory..."
-        if [ -d "out/static" ]; then
-          echo "✅ static directory exists"
-          ls -la out/static/
-        else
-          echo "❌ static directory not found"
-          exit 1
-        fi
-        echo "✅ Build verification passed"
-        
     - name: Deploy to Firebase
       if: github.ref == 'refs/heads/main'
-      uses: FirebaseExtended/action-hosting-deploy@v0
-      with:
-        repoToken: '${{ secrets.GITHUB_TOKEN }}'
-        firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
-        channelId: live
-        projectId: deer-lab
-        entryPoint: '.'
+      run: |
+        npm install -g firebase-tools
+        firebase deploy --only functions,hosting --project deer-lab --token "${{ secrets.FIREBASE_TOKEN }}" --non-interactive
