--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^6.4.0"
+    "firebase-functions": "^6.4.0",
+    "next": "^14.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
