--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,13 @@ jobs:
         echo "npm version:"
         npm --version
         
-    - name: Install dependencies
+    - name: Install root dependencies
       run: npm ci
+
+    - name: Install functions dependencies
+      run: npm ci --prefix functions
       
-    - name: Build project
+    - name: Build Next.js project
       env:
         NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
         NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
@@ -38,6 +41,9 @@ jobs:
         NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
         NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
       run: npm run build
+
+    - name: Build Cloud Functions
+      run: npm run build --prefix functions
       
     - name: Deploy to Firebase
       if: github.ref == 'refs/heads/main'
