--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^6.4.0",
-    "next": "^14.2.5"
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
