--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,9 @@ jobs:
         NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
       run: npm run build
 
+    - name: Copy .next to functions directory
+      run: cp -r .next functions/
+
     - name: Build Cloud Functions
       run: npm run build --prefix functions
       
