--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "xlsx": "^0.18.5",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
