--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "deploy-only": "firebase deploy --only hosting"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.17.1",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.0",
